[gd_scene load_steps=29 format=3 uid="uid://bj2ef4ib03rix"]

[ext_resource type="PackedScene" uid="uid://cd7hvajdquh6b" path="res://scenes/Enemies/baseEnemy.tscn" id="1_u6p8t"]
[ext_resource type="Script" path="res://scenes/Enemies/Bosses/Golem.gd" id="2_m0t7m"]
[ext_resource type="Texture2D" uid="uid://crpenigd4wafb" path="res://assets/Enemies/Golem/golem-atk.png" id="2_qy02c"]
[ext_resource type="Texture2D" uid="uid://dt8s3hqe5jq4o" path="res://assets/Enemies/Golem/golem-walk.png" id="3_wx7hg"]
[ext_resource type="Texture2D" uid="uid://ddruis1abek6p" path="res://assets/Enemies/Golem/golem-die.png" id="4_ps5b5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o0d5p"]
atlas = ExtResource("2_qy02c")
region = Rect2(64, 288, 64, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3stln"]
atlas = ExtResource("2_qy02c")
region = Rect2(128, 288, 64, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_gp6ph"]
atlas = ExtResource("2_qy02c")
region = Rect2(192, 288, 64, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtgxe"]
atlas = ExtResource("2_qy02c")
region = Rect2(256, 288, 64, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgp5c"]
atlas = ExtResource("2_qy02c")
region = Rect2(320, 288, 64, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2mb8"]
atlas = ExtResource("4_ps5b5")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lb3qm"]
atlas = ExtResource("4_ps5b5")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayd0u"]
atlas = ExtResource("4_ps5b5")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nktao"]
atlas = ExtResource("4_ps5b5")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_utl43"]
atlas = ExtResource("4_ps5b5")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jdr0"]
atlas = ExtResource("4_ps5b5")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4m0r"]
atlas = ExtResource("3_wx7hg")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvpmg"]
atlas = ExtResource("3_wx7hg")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj2qx"]
atlas = ExtResource("3_wx7hg")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xm87"]
atlas = ExtResource("3_wx7hg")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dwk3"]
atlas = ExtResource("3_wx7hg")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6fxw"]
atlas = ExtResource("3_wx7hg")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kx2bj"]
atlas = ExtResource("3_wx7hg")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccyw5"]
atlas = ExtResource("3_wx7hg")
region = Rect2(384, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_wa12g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0d5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3stln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gp6ph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtgxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgp5c")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2mb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lb3qm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayd0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nktao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utl43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jdr0")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4m0r")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvpmg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj2qx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xm87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dwk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6fxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kx2bj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccyw5")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_c6v7l"]

[sub_resource type="CircleShape2D" id="CircleShape2D_t8v3g"]

[sub_resource type="CircleShape2D" id="CircleShape2D_saicg"]
radius = 38.0051

[node name="Golem" instance=ExtResource("1_u6p8t")]
collision_layer = 4
script = ExtResource("2_m0t7m")

[node name="AnimatedSprite2D" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_wa12g")
animation = &"attack"
frame = 4
frame_progress = 1.0

[node name="detection_area" parent="." index="1"]
scale = Vector2(0.760001, 0.56)
collision_mask = 6

[node name="CollisionShape2D" parent="detection_area" index="0"]
scale = Vector2(49.5954, -53.5084)
shape = SubResource("CircleShape2D_c6v7l")

[node name="enemy_hitbox" parent="." index="2"]
position = Vector2(3, 29)
scale = Vector2(0.783197, 0.619193)
collision_layer = 4
collision_mask = 7

[node name="CollisionShape2D" parent="enemy_hitbox" index="0"]
position = Vector2(13, 28)
scale = Vector2(-6.66423, 9.41835)
shape = SubResource("CircleShape2D_t8v3g")

[node name="attack_cooldown" parent="." index="4"]
wait_time = 3.032

[node name="SoftCollision" parent="." index="5"]
position = Vector2(0, 99)

[node name="hitbox" parent="." index="6"]
position = Vector2(22, 75)
scale = Vector2(0.844364, 0.681339)
shape = SubResource("CircleShape2D_saicg")

[node name="hit" type="Timer" parent="." index="7"]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="damage_cooldown" to="." method="_on_damage_cooldown_timeout"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="hit" to="." method="_on_hit_timeout"]

[editable path="SoftCollision"]
